# naive-elfiee

./: .elfignore  .elftypes  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/: lsp.json  mcp.json  settings.json
.claude/skills/: elfiee-client
.claude/skills/elfiee/: SKILL.md
.claude/skills/elfiee-be-refactor/: elfiee-be-refactor.skill
.githooks/: pre-commit
.github/workflows/: pr-tests.yml
docs/: README.md
docs/concepts/: agent-building.md  architecture-overview.md  cbac.md  communication.md  data-model.md  elf-format.md  engine.md  event-system.md  extension-system.md
docs/guides/: cli-reference.md  extension-development.md  mcp-tools-reference.md
docs/legacy/analyze/: engine-fix-progress.md  engine-fix.md
docs/plans/: no-ui-refactoring.md
src/: lib.rs  state.rs
src/capabilities/: core.rs  grants.rs  registry.rs
src/cli/: block.rs  event.rs  grant.rs  init.rs  mod.rs  register.rs  resolve.rs  revoke.rs  run.rs  scan.rs  status.rs  unregister.rs
src/elf_project/: config.rs  mod.rs
src/engine/: actor.rs  cache_store.rs  event_store.rs  manager.rs  mod.rs  state.rs
src/extensions/: mod.rs
src/mcp/: mod.rs  server.rs  transport.rs
src/models/: block.rs  command.rs  editor.rs  event.rs  grant.rs  mod.rs  payloads.rs
src/services/: block.rs  document.rs  editor.rs  event.rs  grant.rs  mod.rs  project.rs  session.rs  task.rs
src/utils/: block_type_inference.rs  mod.rs  path_validator.rs
templates/workflows/: code-review.toml
tests/: cli_e2e_integration.rs  commands_block_permissions.rs  project_integration.rs  relation_integration.rs
(+109 files in other folders)
