[workspace]
members = [".", "capability-macros"]

[package]
name = "elfiee"
version = "0.1.0"
description = "Elfiee — EventWeaver for .elf projects"
authors = ["you"]
edition = "2021"
default-run = "elf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "elfiee_lib"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tempfile = "3.8"
ignore = "0.4"
capability-macros = { path = "capability-macros" }
tokio = { version = "1.36", features = ["full"] }
dashmap = "5.5"
base64 = "0.21"
log = "0.4"
dirs = "5.0"
toml = "0.8"
axum = "0.8"

# MCP (Model Context Protocol)
rmcp = { version = "0.5", features = ["server", "transport-sse-server"] }
schemars = "1"
async-trait = "0.1"
tokio-util = "0.7"

# CLI (elf serve)
clap = { version = "4", features = ["derive"] }

# Windows junction support (no admin privileges needed for symlink-like dirs)
[target.'cfg(windows)'.dependencies]
junction = "1"

# Elfiee CLI (init, register, serve, run, status, scan, block, event, grant, revoke)
[[bin]]
name = "elf"
path = "src/bin/elf.rs"

